# ThinkBayes2

./: environment.yml  pyproject.toml
examples/: lstm_example.ipynb
mine/: GP-introduction.ipynb  GP_basics.ipynb  GP_other.ipynb  GP_scikit.ipynb  environment.yml  ets_pymc.ipynb  ets_statsmodels.ipynb  fsolve_example.ipynb  regression_h2o.ipynb  regression_scikit.ipynb
mine/.virtual_documents/: R_notebook.ipynb
mine/pymc_experiments/: AR_pymc.ipynb
notebooks/: chap01.ipynb  chap02.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb  chap06.ipynb  chap07.ipynb  chap08.ipynb  chap09.ipynb  chap10.ipynb  chap11.ipynb  chap12.ipynb  chap17.ipynb  chap19.ipynb  utils.py
ts/: seasonality.ipynb  trend.ipynb
